corrected map issue on mobile landscape

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,9 +37,9 @@ body{
 /*----- for map----*/
 
 .container {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
-    padding: 10px;
+    padding: 0px;
     overflow: none;        
 }
 
@@ -189,7 +189,9 @@ header, h1, a{
         display: inline;
       }
 #map {
-    height: 65%;    
+    height: 500px; 
+    width: 90%;   
+    left: 5%;
 }
 
 
